# alpha-autoresearch

./: .env.example  .gitignore  CLAUDE.md  README.md  __init__.py  __main__.py  config.yaml  main.py  prepare.py  program.md  pyproject.toml  pytest.ini  strategy.py
alpha_autoresearch/: CLAUDE.md  README.md  program.md
alpha_autoresearch/prompts/: solo_program.md  strategist.md
backtest/: __init__.py  engine.py  fees.py  metrics.py  slippage.py  splitter.py
core/: agent.py  claude_cli.py  git_ops.py  loop.py  swarm.py  tools.py
data/: providers.py
plays/: __init__.py  generator.py  models.py  options.py  sizing.py
portfolio/: __init__.py  engine.py  models.py  recommender.py  reporter.py  risk.py
prompts/: auditor.md  optimizer.md  researcher.md  strategist.md
research/: __init__.py  agents.py  fsm.py  indicators.py  report.py  states.py
risk/: __init__.py  audit.py  guards.py  multiple_testing.py
scripts/: dashboard.py
strategies/: base.py
strategies/templates/: mean_reversion.py  momentum.py  options_flow.py
tests/: conftest.py  test_claude_cli.py  test_git_ops.py  test_loop.py  test_metrics.py  test_research_fsm.py  test_risk_guards.py  test_splitter.py  test_strategy.py  test_tools.py
tests/test_plays/: test_generator.py  test_models.py  test_options.py  test_sizing.py
tests/test_portfolio/: test_engine.py  test_models.py  test_recommender.py  test_risk.py
